task: Correct overflow scroll in results #141

--- a/front-end/src/app/manager/results/results.component.scss
+++ b/front-end/src/app/manager/results/results.component.scss
@@ -8,13 +8,14 @@
     background-color: lightgray;
 
     & ul {
-        height: 100%;
+        height: 95%;
         width: 100%;
         padding: 3vh;
         margin: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow-y: scroll;
     }
 }
 
@@ -23,12 +24,14 @@
     border: 2px solid grey;
     background-color: white;
     margin: 1vh;
-    padding: 2vh 1vw;
+    padding: 1.5vh 1vw;
+    border-radius: 10px;
     display: grid;
-    grid-template-columns: auto 15vw 15vw 10vw
+    grid-template-columns: auto 15vw 15vw 10vw;
 }
 
 .quiz span {
+    font-size: 1.5rem;
     align-self: center;
 }
 
